Adjust webserver communication
- Adjust plan data-model on webserver to current version
- Apply changes to mobile version
- Add subscribe/unsubscribe to mobile version
