# webserver/python-flask-server/swagger_server/models/plan_recipe_item.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class PlanRecipeItem(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name: str=None, id: str=None, subscribers: List[str]=None):  # noqa: E501
+        """PlanRecipeItem - a model defined in Swagger
+
+        :param name: The name of this PlanRecipeItem.  # noqa: E501
+        :type name: str
+        :param id: The id of this PlanRecipeItem.  # noqa: E501
+        :type id: str
+        :param subscribers: The subscribers of this PlanRecipeItem.  # noqa: E501
+        :type subscribers: List[str]
+        """
+        self.swagger_types = {
+            'name': str,
+            'id': str,
+            'subscribers': List[str]
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'id': 'id',
+            'subscribers': 'subscribers'
+        }
+
+        self._name = name
+        self._id = id
+        self._subscribers = subscribers
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PlanRecipeItem':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PlanRecipeItem of this PlanRecipeItem.  # noqa: E501
+        :rtype: PlanRecipeItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this PlanRecipeItem.
+
+
+        :return: The name of this PlanRecipeItem.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this PlanRecipeItem.
+
+
+        :param name: The name of this PlanRecipeItem.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this PlanRecipeItem.
+
+
+        :return: The id of this PlanRecipeItem.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this PlanRecipeItem.
+
+
+        :param id: The id of this PlanRecipeItem.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def subscribers(self) -> List[str]:
+        """Gets the subscribers of this PlanRecipeItem.
+
+
+        :return: The subscribers of this PlanRecipeItem.
+        :rtype: List[str]
+        """
+        return self._subscribers
+
+    @subscribers.setter
+    def subscribers(self, subscribers: List[str]):
+        """Sets the subscribers of this PlanRecipeItem.
+
+
+        :param subscribers: The subscribers of this PlanRecipeItem.
+        :type subscribers: List[str]
+        """
+
+        self._subscribers = subscribers
